--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "rimraf dist && tsc",
-    "vercel-build": "echo hello",
-    "ts.check": "tsc --project tsconfig.json",
-    "add-build": "git add dist"
+    "build": "rimraf dist && tsc"
   },
   "keywords": [
     "url-shortner",
